--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="previous">Previous</string>
     <string name="finish">Finish</string>
     <string name="start">Start Game</string>
+    <string name="reset_text">Back Home</string>
+    <string name="view_score">View Score</string>
     <string name="continue_text">Continue</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
