more UI work, linking store to fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="X">X</string>
     <string name="O">O</string>
+    <string name="empty"></string>
 
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
@@ -19,7 +20,6 @@
     <string name="reset_text">Back Home</string>
     <string name="view_score">View Score</string>
     <string name="continue_text">Continue</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="blank_won">Player won the round!</string>
+    <string name="title_scoreboard">Score Board</string>
 </resources>
